[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Minigames/DonkeyKong/Hammer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Minigames/DonkeyKong/Jumpman.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Minigames/DonkeyKong/JumpManGame.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/upheavtt.ttf" type="DynamicFontData" id=4]

[sub_resource type="Animation" id=1]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Hammer:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hammer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 600, 160 ), Vector2( 600, 305 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Hammer:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ 180.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hammer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 600, 305 ), Vector2( 600, 160 ) ]
}

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 0, 240 )
b = Vector2( 720, 240 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 240 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 4 )

[node name="JumpManGame" type="Node2D"]
script = ExtResource( 3 )

[node name="Hammer" parent="." instance=ExtResource( 1 )]
position = Vector2( 600, 160 )

[node name="Jumpman" parent="." instance=ExtResource( 2 )]
position = Vector2( 600, 240 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/down = SubResource( 1 )
anims/up = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 360, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 370, 240 )
shape = SubResource( 4 )

[node name="JMLifeText" type="Label" parent="."]
margin_left = 201.41
margin_top = 48.0
margin_right = 493.41
margin_bottom = 92.0
custom_fonts/font = SubResource( 5 )
text = "J. M. Life: 3"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="hit" from="Jumpman" to="." method="_on_Jumpman_hit"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
